Fix `z-index` issue on floating toolbar dialog
Fixing `z-index` issue of floating toolbar dialog not overlapping when
Special Character dialog is active.

Bug: T140237

--- a/modules/ve-mw/init/styles/ve.init.mw.DesktopArticleTarget.css
+++ b/modules/ve-mw/init/styles/ve.init.mw.DesktopArticleTarget.css
@@ -16,6 +16,7 @@
 .ve-ui-toolbar-floating .oo-ui-toolbar-bar {
 	transform: translateY( -100% );
 	transition: transform 0.4s ease; /* stylelint-disable-line no-unsupported-browser-features */
+	z-index: 4;
 }
 
 .ve-active .ve-ui-toolbar-floating .oo-ui-toolbar-bar {
